# typeio_2

./: .gitignore  ;  Makefile  package-lock.json  package.json  typeio.cabal
exe/server/: Main.hs
lib/src/: CHANGELOG.md  LICENSE
lib/src/common/: Either.hs  Validation.hs
lib/src/common/web/: Attributes.hs  Elements.hs  Query.hs  Types.hs  Validation.hs
lib/src/common/web/template/: mainheader.hs
lib/src/config/: App.hs  Db.hs  Load.hs  Web.hs
lib/src/container/: Build.hs  Root.hs
lib/src/data/: Either.hs  HashTree.hs
lib/src/data/text/: Util.hs
lib/src/database/: Init.hs  Logging.hs
lib/src/domain/admin/application/: Config.hs
lib/src/domain/central/: Container.hs
lib/src/domain/central/container/: Api.hs  Ui.hs
lib/src/domain/central/middleware/: IndexRender.hs
lib/src/domain/central/responder/: Empty.hs  IndexView.hs  Seed.hs
lib/src/domain/central/responder/api/: Container.hs  Seed.hs
lib/src/domain/central/responder/ui/: Container.hs  Empty.hs  IndexView.hs
lib/src/domain/project/: Container.hs  Model.hs  Rules.hs
lib/src/domain/project/container/: Api.hs  Ui.hs
lib/src/domain/project/responder/: Node.hs  Nodestatus.hs  Nodetype.hs  Project.hs  ProjectIndex.hs
lib/src/domain/project/responder/api/: Container.hs
lib/src/domain/project/responder/api/NodeStatus/: Get.hs
lib/src/domain/project/responder/api/NodeType/: Get.hs
lib/src/domain/project/responder/api/Project/: Get.hs
lib/src/domain/project/responder/api/node/: Get.hs  Post.hs
lib/src/domain/project/responder/projectcreate/: Submit.hs  View.hs
lib/src/domain/project/responder/projectindex/: List.hs  View.hs
lib/src/domain/project/responder/projectmanage/: Core.hs  Graph.hs  Link.hs  Node.hs  NodeDetail.hs  View.hs
lib/src/domain/project/responder/projectmanage/Node/: ActionMenu.hs  Description.hs  Detail.hs  Edit.hs  Query.hs  Refresh.hs  Save.hs  Status.hs  Title.hs  Validation.hs
lib/src/domain/project/responder/ui/: Container.hs
lib/src/domain/project/responder/ui/ProjectCreate/: Submit.hs  View.hs
lib/src/domain/project/responder/ui/ProjectIndex/: List.hs  View.hs
lib/src/domain/project/responder/ui/ProjectManage/: Graph.hs  Link.hs  Node.hs  View.hs
lib/src/domain/project/responder/ui/ProjectManage/Node/: Description.hs  Detail.hs  Edit.hs  Query.hs  Refresh.hs  Status.hs  Title.hs  Validation.hs
lib/src/domain/system/: Container.hs
lib/src/domain/system/container/: Api.hs  Middleware.hs
lib/src/domain/system/middleware/: Container.hs  RequestId.hs
lib/src/domain/system/middleware/logging/: Common.hs  Request.hs  Response.hs
lib/src/domain/system/responder/: Config.hs  Container.hs
lib/src/environment/: Acquire.hs  Db.hs  Env.hs  Logging.hs
lib/src/logging/: Core.hs  Database.hs
lib/src/platform/: Web.hs
lib/src/platform/web/: Middleware.hs  Router.hs
lib/src/web/: Middleware.hs
lib/src/web/middleware/: RequestId.hs
lib/src/web/middleware/logging/: Common.hs  Request.hs  Response.hs
local/script/: seed-database.sh  start-postgres.sh
migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_add_project_table.down.sql  000002_add_project_table.up.sql  000003_add_node_type_table.down.sql  000003_add_node_type_table.up.sql  000004_create_node_status_table.down.sql  000004_create_node_status_table.up.sql  000005_create_node_table.down.sql  000005_create_node_table.up.sql  000006_create_node_status_change_table.down.sql  000006_create_node_status_change_table.up.sql  000007_create_dependency_table.down.sql  000007_create_dependency_table.up.sql  000008_project-vw.down.sql  000008_project-vw.up.sql
static/script/: nodetree.js  nodetree2.js
static/styles/: global.css  material.css
static/styles/views/: add-project.css  manage-project.css
