cabal-version:      3.0
name:               typeio 
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             jordanstorz
maintainer:         jm.storz@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable server 
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
      base ^>=4.18.3.0
      , src 
    hs-source-dirs:   exe/server
    default-language: Haskell2010

library src 
    import:
      warnings
    exposed-modules:
      Platform.Web
    other-modules:
      Common.Validation
      , Common.Web.Attributes
      , Common.Web.Elements
      , Common.Web.Query
      , Common.Web.Template.MainHeader
      , Config.App
      , Config.Db
      , Config.Web
      , Container.Build
      , Container.Root
      , Data.Either
      , Data.HashTree
      , Data.Text.Util
      , Domain.Central.Container
      , Domain.Central.Responder.Ui.Empty
      , Domain.Central.Responder.Ui.IndexView
      , Domain.Central.Responder.Ui.Container
      , Domain.Central.Responder.Api.Seed
      , Domain.Central.Responder.Api.Container
      , Domain.Central.Middleware.IndexRender
      , Domain.Project.Container
      , Domain.Project.Responder.Api.Node.Get
      , Domain.Project.Responder.Api.Node.Post
      , Domain.Project.Responder.Api.NodeStatus.Get
      , Domain.Project.Responder.Api.NodeType.Get
      , Domain.Project.Responder.Api.Project.Get
      , Domain.Project.Responder.Api.Container
      , Domain.Project.Responder.Ui.Container
      , Domain.Project.Responder.Ui.ProjectManage.Graph
      , Domain.Project.Responder.Ui.ProjectManage.Link
      , Domain.Project.Responder.Ui.ProjectManage.Node
      , Domain.Project.Responder.Ui.ProjectManage.Node.Description
      , Domain.Project.Responder.Ui.ProjectManage.Node.Detail
      , Domain.Project.Responder.Ui.ProjectManage.Node.Edit
      , Domain.Project.Responder.Ui.ProjectManage.Node.Query
      , Domain.Project.Responder.Ui.ProjectManage.Node.Refresh
      , Domain.Project.Responder.Ui.ProjectManage.Node.Status
      , Domain.Project.Responder.Ui.ProjectManage.Node.Title
      , Domain.Project.Responder.Ui.ProjectManage.Node.Validation
      , Domain.Project.Responder.Ui.ProjectManage.View
      , Domain.Project.Responder.Ui.ProjectCreate.Submit
      , Domain.Project.Responder.Ui.ProjectCreate.View
      , Domain.Project.Responder.Ui.ProjectIndex.List
      , Domain.Project.Responder.Ui.ProjectIndex.View
      , Domain.Project.Container.Api
      , Domain.Project.Container.Ui
      , Domain.Project.Model
      , Domain.System.Responder.Config
      , Domain.System.Container.Api
      , Domain.System.Container.Middleware
      , Domain.System.Middleware.RequestId
      , Domain.System.Middleware.Logging.Common
      , Domain.System.Middleware.Logging.Request
      , Domain.System.Middleware.Logging.Response
      , Logging.Core
      , Logging.Database
      , Environment.Acquire
      , Environment.Db
      , Environment.Env
      , Environment.Logging
      , Platform.Web.Router
      , Platform.Web.Middleware
    other-extensions:
      OverloadedStrings
    build-depends:    
      aeson 
      , base ^>=4.18.3.0
      , bytestring
      , case-insensitive
      , clay
      , containers
      , dotenv
      , esqueleto
      , fast-logger
      , hashable
      , http-types
      , lucid2
      , lucid-svg
      , mtl
      , monad-logger
      , network-uri 
      , persistent
      , persistent-postgresql
      , persistent-template
      , postgresql-simple
      , resource-pool
      , time
      , text
      , transformers
      , transformers-base
      , transformers-either
      , unliftio-core
      , unordered-containers
      , uuid
      , wai
      , wai-extra
      , wai-middleware-static
      , wai-util
      , warp
    hs-source-dirs:   lib/src
    default-language: Haskell2010
